fix: remove unplanned dark mode code

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,13 +7,6 @@
   --background-color: #fafafa;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-color: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
   background: 
